# git-to-prompt

./: .gitignore  README.md  pyproject.toml
src/git_to_prompt/: cli.py  formatter.py  git.py  log.py  repo.py  repomixpy.py
tests/: test_cli.py  test_log.py
