
[project]
name = "git-to-prompt"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Adam Montgomery", email = "montgomery.adam@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[tool.pyright]

exclude = ["**/node_modules", "**/__pycache__", "**/notebooks", ".venv/**"]

typeCheckingMode = "strict"

[dependency-groups]
dev = ["pytest"]
